# machinelearning_inruc

./: .gitignore  README.md  README_PATCH.md  REPORT_NOTES.md  TIMEREISE_CURRENT_SUMMARY.md  TIMEREISE_NEXT_PLAN.md  TIMEREISE_REPORT.md  pyproject.toml  request.md  suggest.md  冲分与物理先验调研报告_2026-06-10.md  创新方法.md  官方要求.md  指标计算与当前结果汇总_2026-06-10.md  本轮最佳执行汇报_2026-06-10.md  比赛优化执行记录_2026-06-14.md  比赛来源与文献优化思路.md
configs/: custom_lstm_100k.yaml  default.yaml  kd_lstm_100k_a03.yaml  kd_lstm_100k_a06.yaml  spectral_lite_a.yaml  spectral_lite_b.yaml  spectral_lite_c.yaml  spectral_lite_c_causal_ft_v1.yaml  spectral_lite_c_causal_ft_v2a_bnfixed.yaml  spectral_lite_c_causal_ft_v2a_safe.yaml  spectral_lite_c_causal_ft_v2b_mid.yaml  spectral_lite_c_causal_ft_v3a_no_renorm.yaml  spectral_lite_c_causal_ft_v3b_insert_bias.yaml  spectral_lite_c_causal_ft_v3c_insert_bias_no_renorm.yaml  spectral_lite_c_causal_ft_v4a_pred_insert_bias.yaml  spectral_lite_c_causal_ft_v4b_pred_balanced.yaml  spectral_lite_c_causal_ft_v5a_full_fractions.yaml  spectral_lite_c_causal_ft_v5b_full_delete_repair.yaml  spectral_lite_c_causal_ft_v5c_mid_delete_repair.yaml  spectral_lite_c_causal_ft_v6_auc_aligned.yaml  spectral_lite_c_debug_causal_forward_only.yaml  spectral_lite_c_debug_no_update.yaml
latexruc/: RenminUniv.sty  slide.tex
prepared_hf_val5k/: stats.json  validation_labels.npy  validation_metadata.jsonl
scripts/: smoke_test.py
tools/: eval_manifest_subprocess.py  fold_logit_calibration_into_gemm.py  make_logic_xai_variants.py  patch_train_causal.py  print_timereise_binning_comparison.py  refine_logic_class_relevance.py  run_logic_logit_bias_calibration.py  run_logic_logit_bias_coordinate_search.py  run_logic_ratio_long_search.py  run_logic_timereise_class_candidate_selection.py  run_logic_timereise_condition_prior_search.py  run_logic_timereise_contrastive_search.py  run_logic_timereise_group_segment_search.py  run_logic_timereise_marginal_search.py  run_logic_timereise_mech_prior_fusion.py  timereise_branch_utils.py  (+15 more)
(+24 files in other folders)
