[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gearxai-project"
version = "0.1.0"
description = "PyTorch starter for GearXAI explainable gearbox fault diagnosis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "numpy>=1.24.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.3.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
]

[project.scripts]
gearxai-train = "gearxai_project.train:main"
gearxai-evaluate = "gearxai_project.evaluate:main"
gearxai-evaluate-onnx = "gearxai_project.evaluate_onnx:main"
gearxai-export-onnx = "gearxai_project.export_onnx:main"
gearxai-inspect-data = "gearxai_project.inspect_data:main"
gearxai-analyze-data = "gearxai_project.analyze_data:main"
gearxai-prepare-devkit-data = "gearxai_project.prepare_devkit_data:main"
gearxai-evaluate-devkit = "gearxai_project.evaluate_devkit:main"
gearxai-package-devkit = "gearxai_project.package_devkit:main"

[tool.setuptools.packages.find]
where = ["src"]
